Fix the stopwatch overflowing on mobile

--- a/src/styles/_stopwatch.scss
+++ b/src/styles/_stopwatch.scss
@@ -83,6 +83,9 @@
 
 .progressbar-text {
   padding-left: 15px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .stopwatch-icon {
